fix(): enable HTML inside feature description

--- a/themes/hugo-universal-theme/layouts/partials/features.html
+++ b/themes/hugo-universal-theme/layouts/partials/features.html
@@ -12,7 +12,7 @@
                             <i class="{{ .icon }}"></i>
                         </div>
                         <h3>{{ .name }}</h3>
-                        <p>{{ .description }}</p>
+                        <p>{{ .description | safeHTML }}</p>
                     </div>
                 </div>
                 {{ end }}
