--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -22,13 +22,13 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
   <!-- Css animations  -->
-  <link href="{{ .Site.BaseURL }}css/animate.css" rel="stylesheet">
+  <link href="{{ .Site.BaseURL }}css/animate.min.css" rel="stylesheet">
 
   <!-- Theme stylesheet, if possible do not edit this stylesheet -->
   {{ if and (isset .Site.Params "style") .Site.Params.style }}
     <link href="{{ .Site.BaseURL }}css/style.{{ .Site.Params.style }}.css" rel="stylesheet" id="theme-stylesheet">
   {{ else }}
-    <link href="{{ .Site.BaseURL }}css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="{{ .Site.BaseURL }}css/style.default.min.css" rel="stylesheet" id="theme-stylesheet">
   {{ end }}
 
 
@@ -46,8 +46,8 @@
   <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}img/apple-touch-icon.png" />
   <!-- owl carousel css -->
 
-  <link href="{{ .Site.BaseURL }}css/owl.carousel.css" rel="stylesheet">
-  <link href="{{ .Site.BaseURL }}css/owl.theme.css" rel="stylesheet">
+  <link href="{{ .Site.BaseURL }}css/owl.carousel.min.css" rel="stylesheet">
+  <link href="{{ .Site.BaseURL }}css/owl.theme.min.css" rel="stylesheet">
 
   <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 
